wishlist fix gap

--- a/src/ProfilePage.css
+++ b/src/ProfilePage.css
@@ -154,10 +154,22 @@
 
 .wishlist {
   display: flex;
-  gap: 1rem;
-  overflow-x: auto;
+  height: 100%;
+  overflow-x: scroll;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.child .Card {
+  display: flex;
+  overflow-y: hidden;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 100%;
+  height: 100%;
+  margin: 0;
+  margin-left: 1rem;
+  box-sizing: border-box;
 }
 
 .signout-button {
