--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,7 +10,6 @@
   max-width: 100%;
   height: 100%;
   margin: 1rem;
-  margin-left: 1rem;
   box-sizing: border-box;
 }
 
